# agentsla

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  WRITEUP.md  pyproject.toml  release-notes-v1.0.0.md  release-notes-v1.0.1.md  release-notes-v1.1.0.md  release-notes-v1.2.0.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
agentsla/: __init__.py  __main__.py
agentsla/adapters/: __init__.py  base.py  budget_hooks.py  claude_sdk.py  langgraph.py  noop_hooks.py  rawloop.py  replay_exec.py
agentsla/bench/: __init__.py  eval_classifier.py  figures.py  harness.py  parity.py  real_llm.py  report.py  seeded_errors.py  tasks.py  upgrader.py
agentsla/classify/: __init__.py  classifier.py  heuristics.py  judge.py  metrics.py  taxonomy.py
agentsla/cli/: __init__.py  metrics.py  replay.py  run.py
agentsla/core/: __init__.py  budget.py  events.py  replay.py  schema_version.py  trace.py  types.py
agentsla/policy/: __init__.py  egress.py  gate.py  loader.py  schema.py
agentsla/tools/: deterministic.py
agentsla/verify/: __init__.py  base.py  chain.py  claims.py  gate.py  numeric.py
bench/results/: REPORT.md  eval_classifier.md  labels.jsonl  seeded_errors_section.md
dashboards/: grafana.json
docs/: EXECUTION.md  GPU_API_COST_OPTIMIZATION.md  PRD-v1.md  PRD-v2.md  PRD.md  TRD-v1.md  TRD-v2.md  TRD.md  class-taxonomy.md  comparative-analysis.md  failure-modes.md  schema-migrations.md
examples/: policy.yaml
scripts/: build_classify_dataset.py  build_held_out_fixture.py  eval_classifier_agreement.py
tests/: __init__.py  conftest.py
tests/docs/: test_readme_integrity.py  test_writeup_integrity.py
tests/fixtures/: held_out_labels.jsonl
tests/fixtures/classify/: labels.jsonl
tests/integration/: test_bench_smoke.py  test_classifier_eval.py  test_claude_sdk_parity.py  test_cli_byte_identical.py  test_cli_lazy_imports.py  test_cross_adapter_parity.py  test_policy_example.py  test_readme_quickstart.py  test_verdict_persistence.py
tests/property/: test_policy_gate.py  test_replay_stateful.py
tests/release/: test_makefile_integration_targets.py  test_release_consistency.py  test_release_provenance.py
tests/unit/: test_main_dispatch.py
tests/unit/adapters/: test_adapter_base.py  test_budget_hooks.py  test_claude_sdk.py  test_langgraph.py  test_rawloop.py  test_replay_exec.py
tests/unit/bench/: __init__.py  test_figures.py  test_harness_cli.py  test_parity.py  test_real_llm.py  test_report.py  test_seeded_errors.py  test_tasks.py
tests/unit/classify/: __init__.py  _fixtures.py  test_classifier.py  test_heuristics.py  test_judge.py  test_metrics.py  test_metrics_idempotency.py  test_taxonomy.py
tests/unit/cli/: test_cli_entrypoints.py  test_metrics_cli.py
tests/unit/core/: __init__.py  test_budget.py  test_events_schema.py  test_replay_report.py  test_schema_version.py  test_trace_store.py  test_types.py
tests/unit/policy/: test_egress.py  test_gate.py  test_loader.py  test_schema.py
tests/unit/scripts/: test_build_held_out_fixture.py
tests/unit/tools/: test_deterministic.py
tests/unit/verify/: test_internal_claim_verdict.py  test_numeric.py  test_numeric_tolerance_config.py  test_range_claim_extraction.py  test_verification_gate.py
